--- a/modules/canbus/BUILD
+++ b/modules/canbus/BUILD
@@ -7,6 +7,36 @@ package(default_visibility = ["//visibility:public"])
 CANBUS_COPTS = ["-DMODULE_NAME=\\\"canbus\\\""]
 
 cc_library(
+    name = "syn_canbus_component_lib",
+    srcs = ["syn_canbus_component.cc"],
+    hdrs = ["syn_canbus_component.h"],
+    copts = CANBUS_COPTS,
+    deps = [
+        "//cyber",
+        "//modules/canbus/common:canbus_common",
+        "//modules/canbus/vehicle:vehicle_factory",
+        "//modules/common/adapters:adapter_gflags",
+        "//modules/common/monitor_log",
+        "//modules/common/status",
+        "//modules/drivers/canbus/can_client",
+        "//modules/drivers/canbus/can_client:can_client_factory",
+        "//modules/drivers/canbus/can_comm:can_receiver",
+        "//modules/drivers/canbus/can_comm:can_sender",
+        "//modules/guardian/proto:guardian_cc_proto",
+        "@com_github_gflags_gflags//:gflags",
+    ],
+)
+
+cc_binary(
+    name = "libsyn_canbus_component.so",
+    linkshared = True,
+    linkstatic = False,
+    deps = [
+        ":syn_canbus_component_lib",
+    ],
+)
+
+cc_library(
     name = "canbus_component_lib",
     srcs = ["canbus_component.cc"],
     hdrs = ["canbus_component.h"],
