--- a/modules/drivers/canbus/can_client/BUILD
+++ b/modules/drivers/canbus/can_client/BUILD
@@ -14,6 +14,7 @@ cc_library(
         "//modules/drivers/canbus/can_client/fake:fake_can_client",
         "//modules/drivers/canbus/can_client/hermes_can:hermes_can_client",
         "//modules/drivers/canbus/can_client/socket:socket_can_client_raw",
+        "//modules/drivers/canbus/can_client/oscc:oscc_can_client",
         "//modules/drivers/canbus/common:canbus_common",
         "//modules/drivers/canbus/proto:can_card_parameter_cc_proto",
     ] + select({
