--- a/modules/drivers/gnss/parser/BUILD
+++ b/modules/drivers/gnss/parser/BUILD
@@ -9,6 +9,7 @@ cc_library(
         ":data_parser",
         ":novatel_parser",
         ":rtcm_parsers",
+        ":an_parser",
     ],
 )
 
@@ -22,7 +23,9 @@ cc_library(
     copts = ["-Ithird_party/rtklib"],
     deps = [
         ":novatel_parser",
+        ":an_parser",
         "//cyber",
+        "//modules/drivers/gnss/an:an_gnss_lib",
         "//modules/common/adapters:adapter_gflags",
         "//modules/common/util:message_util",
         "//modules/drivers/gnss/proto:gnss_best_pose_cc_proto",
@@ -34,6 +37,33 @@ cc_library(
         "//modules/transform:transform_broadcaster",
         "@eigen",
         "@proj",
+    ],
+)
+
+cc_library(
+    name = "an_parser",
+    srcs = ["an_parser.cc"],
+    hdrs = [
+        "parser.h",
+    ],
+    copts = ["-Ithird_party/rtklib"],
+    deps = [
+        "//cyber",
+        "//modules/common/adapters:adapter_gflags",
+        "//modules/common/proto:error_code_cc_proto",
+        "//modules/common/proto:geometry_cc_proto",
+        "//modules/common/proto:header_cc_proto",
+        "//modules/drivers/gnss/proto:config_cc_proto",
+        "//modules/drivers/gnss/proto:gnss_best_pose_cc_proto",
+        "//modules/drivers/gnss/proto:gnss_cc_proto",
+        "//modules/drivers/gnss/proto:gnss_raw_observation_cc_proto",
+        "//modules/drivers/gnss/proto:heading_cc_proto",
+        "//modules/drivers/gnss/proto:imu_cc_proto",
+        "//modules/drivers/gnss/proto:ins_cc_proto",
+        "//modules/drivers/gnss/proto:an_gnss_cc_proto",
+        "//modules/drivers/gnss/util:gnss_util",
+        "//third_party/rtklib",
+        "//modules/drivers/gnss/an:an_gnss_lib",
     ],
 )
 
