--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,8 @@ third_party/can_card_library/esd_can/lib
 
 # Map data files
 modules/map/data
+# Synergy maps
+!modules/map/data/wolverhampton_v2/**
 
 # python proto
 *_pb2.py
