Quick test: GNSS + Loclization + Google API

--- a/cyber/conf/cyber.pb.conf
+++ b/cyber/conf/cyber.pb.conf
@@ -28,6 +28,7 @@
 run_mode_conf {
     run_mode: MODE_REALITY
     clock_mode: MODE_CYBER
+    # clock_mode: MODE_CYBER // change it?
 }
 
 scheduler_conf {
