--- a/modules/drivers/BUILD
+++ b/modules/drivers/BUILD
@@ -4,12 +4,13 @@ package(
     default_visibility = ["//visibility:public"],
 )
 
-install(
-    name = "install",
-    deps = [
-        "//modules/drivers/camera:install",
-        "//modules/drivers/gnss:install",
-        "//modules/drivers/microphone:install",
-        "//modules/drivers/tools/image_decompress:install",
-    ],
-)
+#FIXME: No install target yet
+# install(
+#     name = "install",
+#     deps = [
+#         "//modules/drivers/camera:install",
+#         "//modules/drivers/gnss:install",
+#         "//modules/drivers/microphone:install",
+#         "//modules/drivers/tools/image_decompress:install",
+#     ],
+# )
